fix map filters overflowing with small viewheight

--- a/src/styles/components/map/_mapfilters.scss
+++ b/src/styles/components/map/_mapfilters.scss
@@ -134,6 +134,11 @@
         overflow: scroll;
         height: 100%;
         justify-content: unset;
+
+        &__content {
+          height: unset;
+        }
+
         .tooltip {
           display: none;
         }
